exports[`behavior auth fail  1`] = `
<Connect(Connect(UserListCom))
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "liftedStore": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(Symbol.observable): [Function],
      },
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }>
  <Connect(UserListCom)
    dispatch={[Function]}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "liftedStore": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(Symbol.observable): [Function],
        },
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(Symbol.observable): [Function],
      }
    }>
    <UserListCom
      auth={
        Object {
          "error": Object {
            "info": "auth",
          },
          "loaded": false,
          "loading": false,
        }
      }
      dispatch={[Function]}
      load={[Function]}
      nextGroupUsers={[Function]}
      pushState={[Function]}
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "liftedStore": Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(Symbol.observable): [Function],
          },
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(Symbol.observable): [Function],
        }
      }
      toDetail={[Function]}
      userRepo={
        Object {
          "loaded": false,
          "loading": false,
          "showbegin": 0,
        }
      }>
      <div />
    </UserListCom>
  </Connect(UserListCom)>
</Connect(Connect(UserListCom))>
`;

exports[`behavior auth success > users load success 1`] = `
<Connect(Connect(UserListCom))
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "liftedStore": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(Symbol.observable): [Function],
      },
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }>
  <Connect(UserListCom)
    dispatch={[Function]}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "liftedStore": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(Symbol.observable): [Function],
        },
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(Symbol.observable): [Function],
      }
    }>
    <UserListCom
      auth={
        Object {
          "loaded": true,
          "loading": false,
          "user": Object {
            "token": "kjhuih",
            "username": "king",
            "valid": 1,
          },
        }
      }
      dispatch={[Function]}
      load={[Function]}
      nextGroupUsers={[Function]}
      pushState={[Function]}
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "liftedStore": Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(Symbol.observable): [Function],
          },
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(Symbol.observable): [Function],
        }
      }
      toDetail={[Function]}
      userRepo={
        Object {
          "loaded": true,
          "loading": false,
          "showbegin": 0,
          "users": Array [
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 0,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 0,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 1,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 1,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 2,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 2,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 3,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 3,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 4,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 4,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 5,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 5,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 6,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 6,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 7,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 7,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 8,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 8,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 9,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 9,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
          ],
        }
      }>
      <div>
        <div
          className="rtop rtop2">
          <div
            className="but-box">
            <p>
              <a
                className="add-but"
                onClick={[Function]}>
                新建
              </a>
              <a
                className="edit-but"
                onClick={[Function]}>
                修改
              </a>
              <a
                className="delete-but"
                onClick={[Function]}>
                删除
              </a>
            </p>
          </div>
          <div
            className="top-input-box">
            <p>
              <input
                id="real_name"
                type="text" />
            </p>
            <p>
              <input
                id="account"
                type="text" />
            </p>
            <p>
              <input
                id="company_name"
                type="text" />
            </p>
            <p>
              <a
                className="search-but"
                href="javascript:void(0)"
                id="search">
                搜索
              </a>
              <a
                className="reset-but"
                href="javascript:void(0)"
                id="reset">
                重置
              </a>
            </p>
          </div>
        </div>
        <div
          className="table-box">
          <table
            className="table table-bordered table-hover table-height table-height4 mtop100 Mbtom50 poolTable">
            <thead>
              <tr>
                <th
                  width="60px">
                  选择
                </th>
                <th>
                  账号
                </th>
                <th>
                  真实姓名
                </th>
                <th>
                  头像
                </th>
                <th>
                  出生日期
                </th>
                <th>
                  年龄
                </th>
                <th>
                  身份证
                </th>
                <th>
                  性别
                </th>
                <th>
                  联系电话
                </th>
                <th>
                  Email
                </th>
                <th>
                  所在公司
                </th>
                <th
                  width="80px">
                  注册时间
                </th>
              </tr>
            </thead>
            <tbody
              id="accountTbody">
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_0"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_0" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_1"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_1" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    1
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_2"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_2" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    2
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_3"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_3" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    3
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_4"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_4" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    4
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_5"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_5" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    5
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_6"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_6" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    6
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_7"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_7" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    7
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_8"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_8" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    8
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_9"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_9" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    9
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <PaginationBoxView
            activeClassName="active"
            breakClassName="break-me"
            breakLabel={
              <a>
                ...
              </a>
            }
            clickCallback={[Function]}
            containerClassName="pagination"
            disabledClassName="disabled"
            marginPagesDisplayed={2}
            nextClassName="next"
            nextLabel="next"
            pageNum={110}
            pageRangeDisplayed={5}
            previousClassName="previous"
            previousLabel="previous"
            subContainerClassName="pages pagination">
            <ul
              className="pagination">
              <li
                className="previous disabled"
                onClick={[Function]}>
                <a
                  className={undefined}>
                  previous
                </a>
              </li>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={1}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={true}>
                <li
                  className="active"
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    1
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={2}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    2
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={3}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    3
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={4}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    4
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={5}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    5
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={6}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    6
                  </a>
                </li>
              </PageView>
              <BreakView
                breakClassName="break-me"
                breakLabel={
                  <a>
                    ...
                  </a>
                }>
                <li
                  className="break-me">
                  <a>
                    ...
                  </a>
                </li>
              </BreakView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={109}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    109
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={110}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    110
                  </a>
                </li>
              </PageView>
              <li
                className="next"
                onClick={[Function]}>
                <a
                  className={undefined}>
                  next
                </a>
              </li>
            </ul>
          </PaginationBoxView>
        </div>
      </div>
    </UserListCom>
  </Connect(UserListCom)>
</Connect(Connect(UserListCom))>
`;

exports[`behavior auth success > users load success 2`] = `
<Connect(Connect(UserListCom))
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "liftedStore": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(Symbol.observable): [Function],
      },
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }>
  <Connect(UserListCom)
    dispatch={[Function]}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "liftedStore": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(Symbol.observable): [Function],
        },
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(Symbol.observable): [Function],
      }
    }>
    <UserListCom
      auth={
        Object {
          "loaded": true,
          "loading": false,
          "user": Object {
            "token": "kjhuih",
            "username": "king",
            "valid": 1,
          },
        }
      }
      dispatch={[Function]}
      load={[Function]}
      nextGroupUsers={[Function]}
      pushState={[Function]}
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "liftedStore": Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(Symbol.observable): [Function],
          },
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(Symbol.observable): [Function],
        }
      }
      toDetail={[Function]}
      userRepo={
        Object {
          "loaded": true,
          "loading": false,
          "showbegin": 0,
          "users": Array [
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 10,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 10,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 11,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 11,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 12,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 12,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 13,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 13,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 14,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 14,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 15,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 15,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 16,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 16,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 17,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 17,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 18,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 18,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
            Object {
              "account": "15100000000",
              "age": "12",
              "birthday": "1212121",
              "birthmonth": "1212121",
              "birthyear": "2121221",
              "card_id": "121121212",
              "card_type": "1212122sd",
              "city": "hshdasdsa",
              "clinic_id": "sdsadsads",
              "company_code": "sdsadsds",
              "company_name": "ysysys",
              "context": "sssssss",
              "country": "sdasdsas",
              "county": "sdasdsads",
              "create_time": "12212121",
              "email": "sdsadsa@163.com",
              "field": "sdadsada",
              "have_child": "sdsadsdas",
              "hospital": "sdasdsad",
              "id": 19,
              "identity_id": "sdasdasdas",
              "invite_code": "sssssss",
              "is_show": "sdasdad",
              "is_use": "ssssss",
              "job": "ssssss",
              "job_age": "sssssss",
              "label": "ssssss",
              "label_id": "ssssss",
              "married": "ssssss",
              "name": "ssssss",
              "nickname": "ssssss",
              "phone": "ssssss",
              "photo": "ssssss",
              "position": "ssssss",
              "post_address": "ssssss",
              "province": "ssssss",
              "race": "ssssss",
              "real_name": 19,
              "remark": "ssssss",
              "role_id": "ssssss",
              "sex": "ssssss",
              "society_number": "ssssss",
              "work_time": "ssssss",
            },
          ],
        }
      }>
      <div>
        <div
          className="rtop rtop2">
          <div
            className="but-box">
            <p>
              <a
                className="add-but"
                onClick={[Function]}>
                新建
              </a>
              <a
                className="edit-but"
                onClick={[Function]}>
                修改
              </a>
              <a
                className="delete-but"
                onClick={[Function]}>
                删除
              </a>
            </p>
          </div>
          <div
            className="top-input-box">
            <p>
              <input
                id="real_name"
                type="text" />
            </p>
            <p>
              <input
                id="account"
                type="text" />
            </p>
            <p>
              <input
                id="company_name"
                type="text" />
            </p>
            <p>
              <a
                className="search-but"
                href="javascript:void(0)"
                id="search">
                搜索
              </a>
              <a
                className="reset-but"
                href="javascript:void(0)"
                id="reset">
                重置
              </a>
            </p>
          </div>
        </div>
        <div
          className="table-box">
          <table
            className="table table-bordered table-hover table-height table-height4 mtop100 Mbtom50 poolTable">
            <thead>
              <tr>
                <th
                  width="60px">
                  选择
                </th>
                <th>
                  账号
                </th>
                <th>
                  真实姓名
                </th>
                <th>
                  头像
                </th>
                <th>
                  出生日期
                </th>
                <th>
                  年龄
                </th>
                <th>
                  身份证
                </th>
                <th>
                  性别
                </th>
                <th>
                  联系电话
                </th>
                <th>
                  Email
                </th>
                <th>
                  所在公司
                </th>
                <th
                  width="80px">
                  注册时间
                </th>
              </tr>
            </thead>
            <tbody
              id="accountTbody">
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_0"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_0" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    10
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_1"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_1" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    11
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_2"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_2" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_3"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_3" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    13
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_4"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_4" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    14
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_5"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_5" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    15
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_6"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_6" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    16
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_7"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_7" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    17
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_8"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_8" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    18
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  <span
                    className="radio-span">
                    <input
                      className="radio"
                      id="userlist_row_9"
                      name="radio"
                      type="radio" />
                    <label
                      htmlFor="userlist_row_9" />
                  </span>
                </td>
                <td
                  className="W100">
                  <span
                    className="spanName"
                    onClick={[Function]}>
                    15100000000
                  </span>
                </td>
                <td>
                  <span>
                    19
                  </span>
                </td>
                <td>
                  <span
                    className="user-pic">
                    <img
                      alt={true}
                      src="test-file-stub" />
                  </span>
                </td>
                <td>
                  <span />
                </td>
                <td>
                  <span>
                    12
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    121121212
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    ssssss
                  </span>
                </td>
                <td>
                  <span>
                    sdsadsa@163.com
                  </span>
                </td>
                <td
                  className="W150">
                  <span>
                    ysysys
                  </span>
                </td>
                <td
                  className="W100">
                  <span>
                    12212121
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <PaginationBoxView
            activeClassName="active"
            breakClassName="break-me"
            breakLabel={
              <a>
                ...
              </a>
            }
            clickCallback={[Function]}
            containerClassName="pagination"
            disabledClassName="disabled"
            marginPagesDisplayed={2}
            nextClassName="next"
            nextLabel="next"
            pageNum={110}
            pageRangeDisplayed={5}
            previousClassName="previous"
            previousLabel="previous"
            subContainerClassName="pages pagination">
            <ul
              className="pagination">
              <li
                className="previous"
                onClick={[Function]}>
                <a
                  className={undefined}>
                  previous
                </a>
              </li>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={1}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    1
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={2}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={true}>
                <li
                  className="active"
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    2
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={3}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    3
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={4}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    4
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={5}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    5
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={6}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    6
                  </a>
                </li>
              </PageView>
              <BreakView
                breakClassName="break-me"
                breakLabel={
                  <a>
                    ...
                  </a>
                }>
                <li
                  className="break-me">
                  <a>
                    ...
                  </a>
                </li>
              </BreakView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={109}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    109
                  </a>
                </li>
              </PageView>
              <PageView
                activeClassName="active"
                onClick={[Function]}
                page={110}
                pageClassName={undefined}
                pageLinkClassName={undefined}
                selected={false}>
                <li
                  className={undefined}
                  onClick={[Function]}>
                  <a
                    className={undefined}>
                    110
                  </a>
                </li>
              </PageView>
              <li
                className="next"
                onClick={[Function]}>
                <a
                  className={undefined}>
                  next
                </a>
              </li>
            </ul>
          </PaginationBoxView>
        </div>
      </div>
    </UserListCom>
  </Connect(UserListCom)>
</Connect(Connect(UserListCom))>
`;
